spring10/zoriC4junk/HW8/src/csc/csliteParser.java
// $ANTLR 3.1.3 Mar 18, 2009 10:09:25 src/csc/cslite.g 2009-05-10 19:47:41

package csc;
import org.jdom.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
public class csliteParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ID", "SEMI", "INT", "BYTE", "L_CURLY", "R_CURLY", "NOT", "BREAK", "FOR", "L_PAREN", "NUM", "COLON", "R_PAREN", "LOOP", "WHILE", "UNTIL", "ASSIGN", "IF", "ELSE", "DOT", "COMMA", "PLUS", "MINUS", "EQ", "NE", "GT", "LT", "LE", "GE", "AND", "OR", "TIMES", "DIVIDES", "MODS", "STRING", "WS", "COMMENT", "LINE_COMMENT", "DIGIT", "ALPHA"
    };
    public static final int LT=30;
    public static final int WHILE=18;
    public static final int FOR=12;
    public static final int NOT=10;
    public static final int ID=4;
    public static final int AND=33;
    public static final int EOF=-1;
    public static final int BREAK=11;
    public static final int R_CURLY=9;
    public static final int IF=21;
    public static final int MODS=37;
    public static final int COMMA=24;
    public static final int LOOP=17;
    public static final int L_PAREN=13;
    public static final int PLUS=25;
    public static final int DIGIT=42;
    public static final int EQ=27;
    public static final int DOT=23;
    public static final int COMMENT=40;
    public static final int NE=28;
    public static final int BYTE=7;
    public static final int GE=32;
    public static final int LINE_COMMENT=41;
    public static final int ELSE=22;
    public static final int INT=6;
    public static final int MINUS=26;
    public static final int SEMI=5;
    public static final int R_PAREN=16;
    public static final int NUM=14;
    public static final int ALPHA=43;
    public static final int COLON=15;
    public static final int DIVIDES=36;
    public static final int WS=39;
    public static final int UNTIL=19;
    public static final int OR=34;
    public static final int ASSIGN=20;
    public static final int GT=29;
    public static final int L_CURLY=8;
    public static final int TIMES=35;
    public static final int LE=31;
    public static final int STRING=38;

    // delegates
    // delegators


        public csliteParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public csliteParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return csliteParser.tokenNames; }
    public String getGrammarFileName() { return "src/csc/cslite.g"; }


      Element newVar(String tag, Element vtype, String vname) {
            Element el = new Element(tag);
            el.addContent(vtype);
            Element e = new Element("Name");
            e.setText(vname);
            el.addContent(e);
            return el;
      }



    // $ANTLR start "program"
    // src/csc/cslite.g:28:1: program returns [Document doc = new Document()] : d= data_sec c= code_sec EOF ;
    public final Document program() throws RecognitionException {
        Document doc =  new Document();

        Element d = null;

        Element c = null;


         Element root_e = new Element("AST_IR");
          doc.addContent(root_e);

        try {
            // src/csc/cslite.g:37:1: (d= data_sec c= code_sec EOF )
            // src/csc/cslite.g:37:3: d= data_sec c= code_sec EOF
            {
            pushFollow(FOLLOW_data_sec_in_program69);
            d=data_sec();

            state._fsp--;
            if (state.failed) return doc;
            if ( state.backtracking==0 ) {
               root_e.addContent(d);
            }
            pushFollow(FOLLOW_code_sec_in_program78);
            c=code_sec();

            state._fsp--;
            if (state.failed) return doc;
            if ( state.backtracking==0 ) {
               root_e.addContent(c);
            }
            match(input,EOF,FOLLOW_EOF_in_program82); if (state.failed) return doc;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return doc;
    }
    // $ANTLR end "program"


    // $ANTLR start "data_sec"
    // src/csc/cslite.g:41:1: data_sec returns [Element el = new Element(\"DATA_SEC\")] : (e= var_def )* ;
    public final Element data_sec() throws RecognitionException {
        Element el =  new Element("DATA_SEC");

        Element e = null;


        try {
            // src/csc/cslite.g:43:1: ( (e= var_def )* )
            // src/csc/cslite.g:43:3: (e= var_def )*
            {
            // src/csc/cslite.g:43:3: (e= var_def )*
            loop1:
            do {
                int alt1=2;
                alt1 = dfa1.predict(input);
                switch (alt1) {
            	case 1 :
            	    // src/csc/cslite.g:43:4: e= var_def
            	    {
            	    pushFollow(FOLLOW_var_def_in_data_sec99);
            	    e=var_def();

            	    state._fsp--;
            	    if (state.failed) return el;
            	    if ( state.backtracking==0 ) {
            	       el.addContent(e);
            	    }

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return el;
    }
    // $ANTLR end "data_sec"


    // $ANTLR start "code_sec"
    // src/csc/cslite.g:46:1: code_sec returns [Element el = new Element(\"CODE_SEC\")] : (e= stmt )* ;
    public final Element code_sec() throws RecognitionException {
        Element el =  new Element("CODE_SEC");

        Element e = null;


        try {
            // src/csc/cslite.g:48:1: ( (e= stmt )* )
            // src/csc/cslite.g:48:3: (e= stmt )*
            {
            // src/csc/cslite.g:48:3: (e= stmt )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==ID||LA2_0==L_CURLY||(LA2_0>=NOT && LA2_0<=FOR)||LA2_0==LOOP||LA2_0==IF) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // src/csc/cslite.g:48:4: e= stmt
            	    {
            	    pushFollow(FOLLOW_stmt_in_code_sec122);
            	    e=stmt();

            	    state._fsp--;
            	    if (state.failed) return el;
            	    if ( state.backtracking==0 ) {
            	       el.addContent(e);
            	    }

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return el;
    }
    // $ANTLR end "code_sec"


    // $ANTLR start "var_def"
    // src/csc/cslite.g:52:1: var_def returns [Element el = null] : d= base_type ID SEMI ;
    public final Element var_def() throws RecognitionException {
        Element el =  null;

        Token ID1=null;
        Element d = null;


        try {
            // src/csc/cslite.g:54:1: (d= base_type ID SEMI )
            // src/csc/cslite.g:54:3: d= base_type ID SEMI
            {
            pushFollow(FOLLOW_base_type_in_var_def147);
            d=base_type();

            state._fsp--;
            if (state.failed) return el;
            ID1=(Token)match(input,ID,FOLLOW_ID_in_var_def149); if (state.failed) return el;
            match(input,SEMI,FOLLOW_SEMI_in_var_def151); if (state.failed) return el;
            if ( state.backtracking==0 ) {
               el = newVar("VAR_DEF", d, (ID1!=null?ID1.getText():null));
                  
            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return el;
    }
    // $ANTLR end "var_def"


    // $ANTLR start "base_type"
    // src/csc/cslite.g:60:1: base_type returns [Element el = null] : ( INT | BYTE );
    public final Element base_type() throws RecognitionException {
        Element el =  null;

        try {
            // src/csc/cslite.g:62:1: ( INT | BYTE )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==INT) ) {
                alt3=1;
            }
            else if ( (LA3_0==BYTE) ) {
                alt3=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return el;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // src/csc/cslite.g:62:3: INT
                    {
                    match(input,INT,FOLLOW_INT_in_base_type171); if (state.failed) return el;
                    if ( state.backtracking==0 ) {
                       el = new Element("Type");
                            el.setText("int");
                          
                    }

                    }
                    break;
                case 2 :
                    // src/csc/cslite.g:66:3: BYTE
                    {
                    match(input,BYTE,FOLLOW_BYTE_in_base_type182); if (state.failed) return el;
                    if ( state.backtracking==0 ) {
                       el = new Element("Type");
                            el.setText("byte");
                          
                    }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return el;
    }
    // $ANTLR end "base_type"


    // $ANTLR start "block"
    // src/csc/cslite.g:73:1: block returns [Element el = new Element(\"BLOCK\")] : L_CURLY (s= stmt )* R_CURLY ;
    public final Element block() throws RecognitionException {
        Element el =  new Element("BLOCK");

        Element s = null;


        try {
            // src/csc/cslite.g:75:1: ( L_CURLY (s= stmt )* R_CURLY )
            // src/csc/cslite.g:75:3: L_CURLY (s= stmt )* R_CURLY
            {
            match(input,L_CURLY,FOLLOW_L_CURLY_in_block203); if (state.failed) return el;
            // src/csc/cslite.g:75:11: (s= stmt )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==ID||LA4_0==L_CURLY||(LA4_0>=NOT && LA4_0<=FOR)||LA4_0==LOOP||LA4_0==IF) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // src/csc/cslite.g:75:13: s= stmt
            	    {
            	    pushFollow(FOLLOW_stmt_in_block211);
            	    s=stmt();

            	    state._fsp--;
            	    if (state.failed) return el;
            	    if ( state.backtracking==0 ) {
            	      el.addContent(s);
            	    }

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            match(input,R_CURLY,FOLLOW_R_CURLY_in_block218); if (state.failed) return el;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return el;
    }
    // $ANTLR end "block"


    // $ANTLR start "stmt"
    // src/csc/cslite.g:79:1: stmt returns [Element el = null] : (e= assign_stmt SEMI | e= if_else_stmt | e= func_call SEMI | e= block | e= loop_until_uncond_stmt | e= while_stmt | e= for_stmt | e= break_stmt SEMI | e= not_stmt );
    public final Element stmt() throws RecognitionException {
        Element el =  null;

        Element e = null;


        try {
            // src/csc/cslite.g:81:3: (e= assign_stmt SEMI | e= if_else_stmt | e= func_call SEMI | e= block | e= loop_until_uncond_stmt | e= while_stmt | e= for_stmt | e= break_stmt SEMI | e= not_stmt )
            int alt5=9;
            alt5 = dfa5.predict(input);
            switch (alt5) {
                case 1 :
                    // src/csc/cslite.g:81:5: e= assign_stmt SEMI
                    {
                    pushFollow(FOLLOW_assign_stmt_in_stmt238);
                    e=assign_stmt();

                    state._fsp--;
                    if (state.failed) return el;
                    match(input,SEMI,FOLLOW_SEMI_in_stmt240); if (state.failed) return el;
                    if ( state.backtracking==0 ) {
                      el=e;
                    }

                    }
                    break;
                case 2 :
                    // src/csc/cslite.g:82:5: e= if_else_stmt
                    {
                    pushFollow(FOLLOW_if_else_stmt_in_stmt252);
                    e=if_else_stmt();

                    state._fsp--;
                    if (state.failed) return el;
                    if ( state.backtracking==0 ) {
                      el=e;
                    }

                    }
                    break;
                case 3 :
                    // src/csc/cslite.g:83:5: e= func_call SEMI
                    {
                    pushFollow(FOLLOW_func_call_in_stmt265);
                    e=func_call();

                    state._fsp--;
                    if (state.failed) return el;
                    match(input,SEMI,FOLLOW_SEMI_in_stmt267); if (state.failed) return el;
                    if ( state.backtracking==0 ) {
                      el=e;
                    }

                    }
                    break;
                case 4 :
                    // src/csc/cslite.g:84:5: e= block
                    {
                    pushFollow(FOLLOW_block_in_stmt280);
                    e=block();

                    state._fsp--;
                    if (state.failed) return el;
                    if ( state.backtracking==0 ) {
                      el=e;
                    }

                    }
                    break;
                case 5 :
                    // src/csc/cslite.g:85:5: e= loop_until_uncond_stmt
                    {
                    pushFollow(FOLLOW_loop_until_uncond_stmt_in_stmt293);
                    e=loop_until_uncond_stmt();

                    state._fsp--;
                    if (state.failed) return el;
                    if ( state.backtracking==0 ) {
                      el=e;
                    }

                    }
                    break;
                case 6 :
                    // src/csc/cslite.g:86:5: e= while_stmt
                    {
                    pushFollow(FOLLOW_while_stmt_in_stmt305);
                    e=while_stmt();

                    state._fsp--;
                    if (state.failed) return el;
                    if ( state.backtracking==0 ) {
                      el=e;
                    }

                    }
                    break;
                case 7 :
                    // src/csc/cslite.g:87:5: e= for_stmt
                    {
                    pushFollow(FOLLOW_for_stmt_in_stmt317);
                    e=for_stmt();

                    state._fsp--;
                    if (state.failed) return el;
                    if ( state.backtracking==0 ) {
                      el=e;
                    }

                    }
                    break;
                case 8 :
                    // src/csc/cslite.g:88:5: e= break_stmt SEMI
                    {
                    pushFollow(FOLLOW_break_stmt_in_stmt329);
                    e=break_stmt();

                    state._fsp--;
                    if (state.failed) return el;
                    match(input,SEMI,FOLLOW_SEMI_in_stmt331); if (state.failed) return el;
                    if ( state.backtracking==0 ) {
                      el=e;
                    }

                    }
                    break;
                case 9 :
                    // src/csc/cslite.g:89:5: e= not_stmt
                    {
                    pushFollow(FOLLOW_not_stmt_in_stmt343);
                    e=not_stmt();

                    state._fsp--;
                    if (state.failed) return el;
                    if ( state.backtracking==0 ) {
                      el=e;
                    }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return el;
    }
    // $ANTLR end "stmt"


    // $ANTLR start "not_stmt"
    // src/csc/cslite.g:93:1: not_stmt returns [Element el = null] : NOT e= expr ;
    public final Element not_stmt() throws RecognitionException {
        Element el =  null;

        Element e = null;


        try {
            // src/csc/cslite.g:95:1: ( NOT e= expr )
            // src/csc/cslite.g:95:3: NOT e= expr
            {
            match(input,NOT,FOLLOW_NOT_in_not_stmt363); if (state.failed) return el;
            pushFollow(FOLLOW_expr_in_not_stmt369);
            e=expr();

            state._fsp--;
            if (state.failed) return el;
            if ( state.backtracking==0 ) {
               el = new Element("NOT");
                el.setContent(e);

            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return el;
    }
    // $ANTLR end "not_stmt"


    // $ANTLR start "break_stmt"
    // src/csc/cslite.g:102:1: break_stmt returns [Element el = null] : BREAK ;
    public final Element break_stmt() throws RecognitionException {
        Element el =  null;

        try {
            // src/csc/cslite.g:104:1: ( BREAK )
            // src/csc/cslite.g:104:3: BREAK
            {
            match(input,BREAK,FOLLOW_BREAK_in_break_stmt387); if (state.failed) return el;
            if ( state.backtracking==0 ) {
               el = new Element("MY_BREAK_STMT");
                      
            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return el;
    }
    // $ANTLR end "break_stmt"


    // $ANTLR start "for_stmt"
    // src/csc/cslite.g:109:1: for_stmt returns [Element el = null] : FOR i= ID L_PAREN f= NUM COLON s= NUM ( COLON t= NUM )? R_PAREN b= block ;
    public final Element for_stmt() throws RecognitionException {
        Element el =  null;

        Token i=null;
        Token f=null;
        Token s=null;
        Token t=null;
        Element b = null;


         
          String id = null, first = null, last = null, step = null;

        try {
            // src/csc/cslite.g:114:1: ( FOR i= ID L_PAREN f= NUM COLON s= NUM ( COLON t= NUM )? R_PAREN b= block )
            // src/csc/cslite.g:114:3: FOR i= ID L_PAREN f= NUM COLON s= NUM ( COLON t= NUM )? R_PAREN b= block
            {
            match(input,FOR,FOLLOW_FOR_in_for_stmt414); if (state.failed) return el;
            i=(Token)match(input,ID,FOLLOW_ID_in_for_stmt419); if (state.failed) return el;
            if ( state.backtracking==0 ) {
              id = i.getText();
            }
            match(input,L_PAREN,FOLLOW_L_PAREN_in_for_stmt423); if (state.failed) return el;
            f=(Token)match(input,NUM,FOLLOW_NUM_in_for_stmt427); if (state.failed) return el;
            if ( state.backtracking==0 ) {
              first = f.getText();
            }
            match(input,COLON,FOLLOW_COLON_in_for_stmt431); if (state.failed) return el;
            s=(Token)match(input,NUM,FOLLOW_NUM_in_for_stmt435); if (state.failed) return el;
            if ( state.backtracking==0 ) {
              last = s.getText();
            }
            // src/csc/cslite.g:114:104: ( COLON t= NUM )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==COLON) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // src/csc/cslite.g:114:105: COLON t= NUM
                    {
                    match(input,COLON,FOLLOW_COLON_in_for_stmt440); if (state.failed) return el;
                    t=(Token)match(input,NUM,FOLLOW_NUM_in_for_stmt444); if (state.failed) return el;
                    if ( state.backtracking==0 ) {
                      step = t.getText();
                    }

                    }
                    break;

            }

            match(input,R_PAREN,FOLLOW_R_PAREN_in_for_stmt450); if (state.failed) return el;
            pushFollow(FOLLOW_block_in_for_stmt454);
            b=block();

            state._fsp--;
            if (state.failed) return el;
            if ( state.backtracking==0 ) {
               el = new Element("MY_FOR_STMT");
                      
                      Element af = new Element ("ID");
                      af.setText(id);
                      el.addContent(af);
                      
                      Element bf = new Element ("FIRST");
                      bf.setText (first);
                      el.addContent(bf);
                      
                      Element cf = new Element ("LAST");
                      cf.setText (last);
                      el.addContent(cf);

                      Element df = null;

                      if ( step != null ) {
                              df = new Element ("STEP");
                              df.setText(step);
                              el.addContent(df);
                        }
                        
                      el.addContent(b);
                        

            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return el;
    }
    // $ANTLR end "for_stmt"


    // $ANTLR start "while_stmt"
    // src/csc/cslite.g:142:1: while_stmt returns [Element el = null] : LOOP WHILE L_PAREN e= expr R_PAREN b= block ;
    public final Element while_stmt() throws RecognitionException {
        Element el =  null;

        Element e = null;

        Element b = null;


        try {
            // src/csc/cslite.g:144:1: ( LOOP WHILE L_PAREN e= expr R_PAREN b= block )
            // src/csc/cslite.g:144:3: LOOP WHILE L_PAREN e= expr R_PAREN b= block
            {
            match(input,LOOP,FOLLOW_LOOP_in_while_stmt477); if (state.failed) return el;
            match(input,WHILE,FOLLOW_WHILE_in_while_stmt479); if (state.failed) return el;
            match(input,L_PAREN,FOLLOW_L_PAREN_in_while_stmt481); if (state.failed) return el;
            pushFollow(FOLLOW_expr_in_while_stmt487);
            e=expr();

            state._fsp--;
            if (state.failed) return el;
            match(input,R_PAREN,FOLLOW_R_PAREN_in_while_stmt489); if (state.failed) return el;
            pushFollow(FOLLOW_block_in_while_stmt493);
            b=block();

            state._fsp--;
            if (state.failed) return el;
            if ( state.backtracking==0 ) {
               
                      el = new Element("MY_WHILE_STMT");
                      
                      Element a = new Element("WHILE");
                      a.setContent(e);        
                      
                      el.addContent(a);
                      el.addContent(b);
                        

            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return el;
    }
    // $ANTLR end "while_stmt"


    // $ANTLR start "loop_until_uncond_stmt"
    // src/csc/cslite.g:157:1: loop_until_uncond_stmt returns [Element el = null] : LOOP b= block ( UNTIL L_PAREN e= expr R_PAREN )? ;
    public final Element loop_until_uncond_stmt() throws RecognitionException {
        Element el =  null;

        Element b = null;

        Element e = null;


         int is_until = 0; 
        try {
            // src/csc/cslite.g:160:1: ( LOOP b= block ( UNTIL L_PAREN e= expr R_PAREN )? )
            // src/csc/cslite.g:160:3: LOOP b= block ( UNTIL L_PAREN e= expr R_PAREN )?
            {
            match(input,LOOP,FOLLOW_LOOP_in_loop_until_uncond_stmt520); if (state.failed) return el;
            pushFollow(FOLLOW_block_in_loop_until_uncond_stmt524);
            b=block();

            state._fsp--;
            if (state.failed) return el;
            // src/csc/cslite.g:160:16: ( UNTIL L_PAREN e= expr R_PAREN )?
            int alt7=2;
            alt7 = dfa7.predict(input);
            switch (alt7) {
                case 1 :
                    // src/csc/cslite.g:160:17: UNTIL L_PAREN e= expr R_PAREN
                    {
                    match(input,UNTIL,FOLLOW_UNTIL_in_loop_until_uncond_stmt527); if (state.failed) return el;
                    match(input,L_PAREN,FOLLOW_L_PAREN_in_loop_until_uncond_stmt529); if (state.failed) return el;
                    pushFollow(FOLLOW_expr_in_loop_until_uncond_stmt533);
                    e=expr();

                    state._fsp--;
                    if (state.failed) return el;
                    match(input,R_PAREN,FOLLOW_R_PAREN_in_loop_until_uncond_stmt535); if (state.failed) return el;
                    if ( state.backtracking==0 ) {
                      is_until = 1;
                    }

                    }
                    break;

            }

            if ( state.backtracking==0 ) {
               
                      el = new Element("MY_LOOP_STMT");       
               
                        Element a = null;          
                                  
                        if ( is_until == 1 ){
                              a = new Element ("UNTIL");
                              a.setContent(e);
                              el.addContent(a);
                        }
                        
                        el.addContent(b);
                              
                      
            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return el;
    }
    // $ANTLR end "loop_until_uncond_stmt"


    // $ANTLR start "assign_stmt"
    // src/csc/cslite.g:178:1: assign_stmt returns [Element el = null] : ID ASSIGN e= expr ;
    public final Element assign_stmt() throws RecognitionException {
        Element el =  null;

        Token ID2=null;
        Element e = null;


        try {
            // src/csc/cslite.g:180:1: ( ID ASSIGN e= expr )
            // src/csc/cslite.g:180:3: ID ASSIGN e= expr
            {
            ID2=(Token)match(input,ID,FOLLOW_ID_in_assign_stmt572); if (state.failed) return el;
            match(input,ASSIGN,FOLLOW_ASSIGN_in_assign_stmt574); if (state.failed) return el;
            pushFollow(FOLLOW_expr_in_assign_stmt578);
            e=expr();

            state._fsp--;
            if (state.failed) return el;
            if ( state.backtracking==0 ) {
               el = new Element("ASSIGN_STMT");
                   Element v = new Element("Var");
                   v.setText(ID2.getText());
                   el.addContent(v);
                   el.addContent(e);
                 
            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return el;
    }
    // $ANTLR end "assign_stmt"


    // $ANTLR start "if_else_stmt"
    // src/csc/cslite.g:190:1: if_else_stmt returns [Element el = null] : IF L_PAREN e= expr R_PAREN s1= stmt ELSE s2= stmt ;
    public final Element if_else_stmt() throws RecognitionException {
        Element el =  null;

        Element e = null;

        Element s1 = null;

        Element s2 = null;


        try {
            // src/csc/cslite.g:192:1: ( IF L_PAREN e= expr R_PAREN s1= stmt ELSE s2= stmt )
            // src/csc/cslite.g:192:3: IF L_PAREN e= expr R_PAREN s1= stmt ELSE s2= stmt
            {
            match(input,IF,FOLLOW_IF_in_if_else_stmt599); if (state.failed) return el;
            match(input,L_PAREN,FOLLOW_L_PAREN_in_if_else_stmt601); if (state.failed) return el;
            pushFollow(FOLLOW_expr_in_if_else_stmt607);
            e=expr();

            state._fsp--;
            if (state.failed) return el;
            match(input,R_PAREN,FOLLOW_R_PAREN_in_if_else_stmt609); if (state.failed) return el;
            pushFollow(FOLLOW_stmt_in_if_else_stmt615);
            s1=stmt();

            state._fsp--;
            if (state.failed) return el;
            match(input,ELSE,FOLLOW_ELSE_in_if_else_stmt617); if (state.failed) return el;
            pushFollow(FOLLOW_stmt_in_if_else_stmt623);
            s2=stmt();

            state._fsp--;
            if (state.failed) return el;
            if ( state.backtracking==0 ) {
               el = new Element("IF_ELSE_STMT");
                   el.addContent(e);
                   el.addContent(s1);
                   el.addContent(s2);
                 
            }

            }

        }
